--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
-[submodule "lib/FreeRTOS-Kernel"]
-	path = lib/FreeRTOS-Kernel
+[submodule "software/lib/FreeRTOS-Kernel"]
+	path = software/lib/FreeRTOS-Kernel
 	url = https://gitee.com/embeddedboys/FreeRTOS-Kernel
-[submodule "src/lvgl"]
-	path = src/lvgl
+[submodule "software/src/lvgl"]
+	path = software/src/lvgl
 	url = https://gitee.com/embeddedboys/lvgl
 	branch = release/v8.3
