--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "software/lib/FreeRTOS-Kernel"]
 	path = software/lib/FreeRTOS-Kernel
-	url = https://gitee.com/embeddedboys/FreeRTOS-Kernel
+	url = https://github.com/FreeRTOS/FreeRTOS-Kernel.git
 [submodule "software/src/lvgl"]
 	path = software/src/lvgl
-	url = https://gitee.com/embeddedboys/lvgl
-	branch = release/v8.3
+	url = https://github.com/lvgl/lvgl.git
+	branch = release/v8.4
