--- a/.gitmodules
+++ b/.gitmodules
@@ -1,11 +1,11 @@
 [submodule "software/lib/FreeRTOS-Kernel"]
 	path = software/lib/FreeRTOS-Kernel
-	url = https://github.com/FreeRTOS/FreeRTOS-Kernel.git
+	url = git@gitee.com:yichang-sibnuo/FreeRTOS-Kernel.git
 [submodule "software/src/lvgl"]
 	path = software/src/lvgl
-	url = https://github.com/lvgl/lvgl.git
+	url = git@gitee.com:yichang-sibnuo/lvgl.git
 	branch = release/v8.4
 [submodule "software/include/RP2040-Encoder"]
 	path = software/include/RP2040-Encoder
-	url = https://github.com/tobiglaser/RP2040-Encoder.git
+	url = git@gitee.com:yichang-sibnuo/RP2040-Encoder.git
 	branch = main
